--- a/1PROJETO/index.html
+++ b/1PROJETO/index.html
@@ -17,10 +17,93 @@
     <main>
         <section id="sobre">
             <h2>Sobre Mim</h2>
-            <img src="" alt="Foto minha">
+            <img src="image/imagem2.jpg" alt="Foto minha">
             <p>Olá, eu sou Julio Sena</p>
             <p>Sou um desenvolvedor web apaixonado por criar soluções inovadoras.  </p>
         </section>
+        <section id="interesses">
+  <h2>Meus Interesses</h2>
+  <article>
+    <h3>Séries</h3>
+    <ol>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ol>
+  </article>
+  <article>
+    <h3>Filmes</h3>
+    <ol>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ol>
+  </article>
+        </section>
+        <section id="habilidades">
+ <h2>Minhas Habilidades</h2>
+ <ul>
+    <li>Item 1</li>
+    <li>Item 2</li>
+    <li>Item 3</li>
+ </ul>
+        </section>
+        <section id="tabela">
+      <h2>Epresa em que já trabalhei</h2>
+      <table>
+        <tr class="tabela-topo">
+            <td>Nome</td>
+            <td>Cidade</td>
+            <td>Periodo</td>
+        </tr>
+        <tr>
+            <td>Meta</td>
+            <td>San Francisco</td>
+            <td>2 anos</td>
+        </tr>
+        <tr>
+            <td>Microsoft</td>
+            <td>Seattle, WA</td>
+            <td>3 anos</td>
+        </tr>
+        <tr>
+            <td>Google</td>
+            <td>São Paulo, Brasil</td>
+            <td>6 meses</td>
+        </tr>
+      </table>
+    </section>
+    <section id="contato">
+   <h2>Contato</h2>
+   <form action="">
+   <label for="nome">Nome:</label>
+   <input type="text" name="nome" id="nome">
+ 
+   <label for="email">E-mail:</label>
+   <input type="text" name="email" id="email">
+
+   <label for="assunto">Assunto:</label>
+   <select name="assunto" id="assunto">
+    <option value="">Dúvida</option>
+    <option value="">Sugestão</option>
+    <option value="">Reclamação</option>
+   </select>
+  
+
+   <label for="msg">Mensagem</label>
+    <textarea name="mgs" id="msg" cols="30" rows="10"></textarea>
+    <button>Enviar</button>
+   </form>
+    </section>
     </main>
+    <footer>
+        <p>conecte-se Comigo:</p>
+        <nav>
+            <a href="">Instagran</a>-
+            <a href="">LinkedIn</a>-
+            <a href="">X</a>
+        </nav>
+        <p>Todos os direitos Reservados</p>
+    </footer>
 </body>
 </html>
