--- a/2projeto/index.html
+++ b/2projeto/index.html
@@ -59,6 +59,50 @@
                 </div>
         </div>
     </section>  
+   
+    <section class="portifolio">
+         <h2>Nosso portifólio</h2>
+        <div class="grid">
+            <div class="grid-item">
+                <img src="images/port1.jpg" alt="portifólio 1">
+            </div>
+            <div class="grid-item">
+                <img src="images/port2.jpg" alt="portifólio 2">
+            </div>
+            <div class="grid-item">
+                <img src="images/port3.jpg" alt="portifólio 3">
+            </div>
+            <div class="grid-item">
+                <img src="images/port4.jpg" alt="portifólio 4">
+            </div>
+        </div>
+    </section>
+
+    <section class="contact">
+        <h2>Contato</h2>
+        <form>
+            
+            <label for="name">Name:</label>
+            <input type="text" name="name" id="name">
+
+            <label for="email">E-mail:</label>
+            <input type="email" name="email" id="email">
+
+            <label for="msg">Mensagem:</label>
+            <textarea name="msg" id="msg" rows="10"></textarea>
+
+            <button>Enviar</button>
+        </form>
+    </section>
     </main>
+    <footer>
+        <div>
+            <p>Agência XYZ</p>
+            <P>Todos os direitos reservados</P>
+        </div>
+        <div>
+            Feito por Julio Sena Viana.
+        </div>
+    </footer>
 </body>
 </html>
