Quebra de Texto

--- a/video.html
+++ b/video.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <video src="video.mp4"  autoplay muted loop ></video>
+    
     <div class="area">
         <h1>Titulo Boladão</h1>
     </div>
+    <audio src="audio.mp3" id="palmas" controls></audio>
 </body>
 </html>
