--- a/2projeto/index.html
+++ b/2projeto/index.html
@@ -24,7 +24,7 @@
         <section class="hero">
      <h1>Agência XYZ</h1>
      <P>Somos uma equipe de desenvolvedores apaixonados por criar experiências digitais incríveis</P>
-     <a href="http://" class="cta" onclick="clicou()">Saiba Mais</a>
+     <a href="http://" class="cta" >Saiba Mais</a>
         </section>
         <section class="about">
             <h2>Sobre Nós</h2>
@@ -91,7 +91,7 @@
             <label for="msg">Mensagem:</label>
             <textarea name="msg" id="msg" rows="10"></textarea>
 
-            <button>Enviar</button>
+            <button class="botao">Enviar</button>
         </form>
     </section>
     </main>
